syntax = "proto3";

package bot;

import "tagger/tagger.proto";

option go_package = "./bot;bot_pb";

message MessageSendRequest {
    int32 chat_id = 1 [(tagger.tags) = "form:\"chat_id\" binding:\"required\" label:\"chat_id\""];
    string text = 2 [(tagger.tags) = "form:\"text\" binding:\"required\" label:\"text\""];
}

message MessageSendResponse {}

message MessageChatsRequest {}

message MessageChatsResponse {
    message Item {
        int32 id = 1  [(tagger.tags) = "json:\"id\""];
        string name = 2  [(tagger.tags) = "json:\"name\""];
    }

    repeated Item items = 1  [(tagger.tags) = "json:\"items\""];
}
